tests/fixtures/LatestTests/VariableDeclarationTests/errors/int64_to_int8.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:int8 = 5l

